deploy/rollouts/backend-preview-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-merge-preview
  namespace: pdf-editor-ns
  annotations:
    blue-green: 'true'
spec:
  selector:
    app: backend-merge
  ports:
  - port: 8080
    targetPort: backend-port
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: backend-rotate-preview
  namespace: pdf-editor-ns
  annotations:
    blue-green: 'true'
spec:
  selector:
    app: backend-rotate
  ports:
  - port: 8081
    targetPort: backend-port
    protocol: TCP
...
