deploy/rollouts/deploy copy.yml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: pdf-editor-ns

---

apiVersion: v1
kind: Service
metadata:
  name: backend-merge
  namespace: pdf-editor-ns
spec:
  selector:
    app: backend-main
  ports:
  - port: 8080
    targetPort: backend-port
    protocol: TCP

# ---

# apiVersion: argoproj.io/v1alpha1
# kind: Rollout
# metadata:
#   name: pdf-editor-frontend
#   labels:
#     app: pdf
#     frontend: main
#   namespace: pdf-editor-ns
# spec:
#   replicas: 4
#   strategy:
#     blueGreen:
#       # activeService specifies the service to update with the new template hash at time of promotion.
#       # This field is mandatory for the blueGreen update strategy.
#       activeService: frontend-lb
#       # previewService specifies the service to update with the new template hash before promotion.
#       # This allows the preview stack to be reachable without serving production traffic.
#       # This field is optional.
#       previewService: frontend-lb-preview
#       # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
#       # immediately before the promotion. If omitted, the default behavior is to promote the new
#       # stack as soon as the ReplicaSet are completely ready/available.
#       # Rollouts can be resumed using: `kubectl argo rollouts promote ROLLOUT`
#       autoPromotionEnabled: true
#   revisionHistoryLimit: 2
#   selector:
#     matchLabels:
#       app: frontend-pdf
#   template:
#     metadata:
#       labels:
#         app: frontend-pdf
#     spec:
#       containers:
#       - name: pdf-editor-frontend
#         image: docker.io/dipugodocker/pdf-editor:0.7-frontend
#         resources:
#           limits:
#             memory: "128Mi"
#             cpu: "500m"
#         imagePullPolicy: IfNotPresent
#         ports:
#         - containerPort: 80
#           name: web-port

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pdf-editor-backend
  namespace: pdf-editor-ns
  labels:
    app: pdf
    backend: main
spec:
  replicas: 2
  strategy:
    blueGreen:
      # activeService specifies the service to update with the new template hash at time of promotion.
      # This field is mandatory for the blueGreen update strategy.
      activeService: backend-merge
      # previewService specifies the service to update with the new template hash before promotion.
      # This allows the preview stack to be reachable without serving production traffic.
      # This field is optional.
      previewService: backend-preview
      # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
      # immediately before the promotion. If omitted, the default behavior is to promote the new
      # stack as soon as the ReplicaSet are completely ready/available.
      # Rollouts can be resumed using: `kubectl argo rollouts promote ROLLOUT`
      autoPromotionEnabled: true
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend-main
  template:
    metadata:
      labels:
        app: backend-main
    spec:
      containers:
        - name: pdf-editor
          image: docker.io/dipugodocker/pdf-editor:0.7-backend
          volumeMounts:
          - name: backend
            mountPath: /go/src/
          resources:
            requests:
                memory: "50Mi"
                cpu: "10m"
            limits:
              memory: "500Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              port: 8080
              path: /greet
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              port: 8080
              path: /greet
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: backend-port
      volumes:
      - name: backend
        persistentVolumeClaim:
          claimName: pdf-editor-pvc
