deploy/rollouts/frontend-preview-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb-canary
  namespace: pdf-editor-ns
  annotations:
    blue-green: 'true'
spec:
  selector:
    app: frontend-pdf
  ports:
  - port: 80
    targetPort: web-port
    protocol: TCP
