deploy/rollouts/deploy-frontend.yml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: pdf-editor-ns

# ---

apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: pdf-editor-ns
  labels:
    name: pdf-editor-frontend
  type: ClusterIP
spec:
  selector:
    app: frontend-pdf
  ports:
  - port: 80
    targetPort: web-port
    name: web
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-editor-ig
  labels:
    name: pdf-editor-ig
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: pdf-editor-ns
spec:
  rules:
  - host: pdf-editor
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-lb
            port:
              number: 80

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pdf-editor-frontend
  labels:
    app: frontend-pdf
  namespace: pdf-editor-ns
spec:
  replicas: 4
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary:
      maxUnavailable: 0
      stableService: frontend-lb
      canaryService: frontend-lb-canary
      trafficRouting:
        nginx:
          stableIngress: pdf-editor-ig
      steps:
      - setWeight: 30
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 100
      - pause: {}

  selector:
    matchLabels:
      app: frontend-pdf
  template:
    metadata:
      labels:
        app: frontend-pdf
    spec:
      containers:
      - name: pdf-editor-frontend
        image: docker.io/dipugodocker/pdf-editor:0.8-frontend
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web-port

...
